--- a/pom.xml
+++ b/pom.xml
@@ -107,11 +107,11 @@
          </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc6 -->
-        <dependency>
+     <!--   <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>12.1.0.1-atlassian-hosted</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.freemarker</groupId>
