--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,12 @@
         </dependency>
 
         <!-- 热部署 -->
-        <dependency>
+    <!--    <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
             <scope>true</scope>
-        </dependency>
+        </dependency>-->
         <!-- 配置log4j2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
