--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.aliyun.api.gateway</groupId>
+            <artifactId>sdk-core-java</artifactId>
+            <version>1.1.5</version>
+        </dependency>
     </dependencies>
 
     <!--<distributionManagement>
